# todo-app

./: .gitignore  README.md  pyproject.toml
specs/: sp.analyze-ux.md  sp.analyze.md  sp.constitution.md  sp.implement.md  sp.specify.md  sp.tasks.md
src/: main.py
src/todo/: __init__.py  __main__.py  cli.py  interactive.py
src/todo.egg-info/: PKG-INFO  SOURCES.txt
src/todo/application/: __init__.py  services.py
src/todo/domain/: __init__.py  errors.py  models.py
src/todo/repository/: __init__.py  memory_repo.py
tests/: __init__.py  test_domain.py  test_interactive.py  test_repository.py  test_services.py
